kubernetes/04-ports/task2/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontback
  namespace: netology-fb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontback-app
  template:
    metadata:
      labels:
        app: frontback-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.4
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
