kubernetes/04-ports/task2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: multiback-svc
  namespace: netology-fb
spec:
  selector: 
    app: frontback-app
  ports:
    - name: miltitool
      protocol: TCP
      port: 9002
      targetPort: 8080
