kubernetes/04-ports/task2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxfront-svc
  namespace: netology-fb
spec:
  selector: 
    app: frontback-app
  ports:
    - name: nginxhttp
      protocol: TCP
      port: 9001
      targetPort: 80
