kubernetes/04-ports/task2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontback-ingress
  namespace: netology-fb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginxfront-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: multiback-svc
            port:
              number: 80
